--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,48 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <EditText
         android:id="@+id/nota1"
         android:layout_width="200dp"
         android:layout_height="63dp"
         android:layout_marginTop="40dp"
         android:background="@android:color/darker_gray"
+        android:ems="10"
         android:hint="@string/nota1"
+        android:inputType="textPersonName"
         android:padding="20dp"
-        android:text="@string/nota_1"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/nota2"
-        android:layout_width="200dp"
-        android:layout_height="63dp"
-        android:layout_marginTop="128dp"
-        android:background="@android:color/darker_gray"
-        android:hint="@string/nota2"
-        android:padding="20dp"
-        android:text="@string/nota_2"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/faltas"
-        android:layout_width="200dp"
-        android:layout_height="63dp"
-        android:layout_marginTop="216dp"
-        android:background="@android:color/darker_gray"
-        android:hint="@string/faltas"
-        android:padding="20dp"
-        android:text="@string/faltas"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.545"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -55,14 +26,46 @@
         android:id="@+id/calcular"
         android:layout_width="159dp"
         android:layout_height="59dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="44dp"
         android:backgroundTint="?attr/colorButtonNormal"
         android:text="@string/Calcular"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintHorizontal_bias="0.547"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/faltas" />
+
+    <EditText
+        android:id="@+id/faltas"
+        android:layout_width="200dp"
+        android:layout_height="63dp"
+        android:layout_marginTop="52dp"
+        android:background="@android:color/darker_gray"
+        android:ems="10"
+        android:hint="@string/faltas"
+        android:inputType="textPersonName"
+        android:padding="20dp"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.545"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nota2" />
+
+    <EditText
+        android:id="@+id/nota2"
+        android:layout_width="200dp"
+        android:layout_height="63dp"
+        android:layout_marginTop="40dp"
+        android:background="@android:color/darker_gray"
+        android:ems="10"
+        android:hint="@string/nota2"
+        android:inputType="textPersonName"
+        android:padding="20dp"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.545"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nota1" />
 
     <TextView
         android:id="@+id/resultado"
@@ -73,9 +76,9 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.527"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/calcular"
-        app:layout_constraintVertical_bias="0.231" />
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
